# examples

./: .gitignore  LICENSE  README.md
setup_aws_lambda_workspace_with_rust_guide/: Cargo.toml  Dockerfile  README.md  release_build.sh  setup_packages.sh
setup_aws_lambda_workspace_with_rust_guide/common/: Cargo.toml
setup_aws_lambda_workspace_with_rust_guide/common/src/: lib.rs
setup_aws_lambda_workspace_with_rust_guide/http_lambda_1/: Cargo.toml
setup_aws_lambda_workspace_with_rust_guide/http_lambda_1/src/: main.rs
setup_aws_lambda_workspace_with_rust_guide/http_lambda_2/: Cargo.toml
